syntax = "proto3";

package buildbarn.configuration.credentials;

option go_package = "github.com/buildbarn/bb-remote-execution/pkg/proto/configuration/credentials";

message UNIXCredentialsConfiguration {
  // The user ID that should be used to run commands.
  uint32 user_id = 1;

  // The primary group ID that should be used to run commands.
  uint32 group_id = 2;

  // Additional groups of which the process should be a member.
  repeated uint32 additional_group_ids = 3;
}
